@startuml class-diagram-community-admin
title Smart Edu Platform - 커뮤니티/챌린지/관리자 클래스 다이어그램

skinparam classAttributeIconSize 0
skinparam shadowing false
skinparam linetype ortho
skinparam packageStyle rectangle
hide circle

package "커뮤니티/챌린지/관리자 도메인" #F3E5F5 {
  class User <<사용자>> {
    - userId: Long
    - loginId: String
    - name: String
  }

  class Admin <<관리자>> {
    - adminId: Long
    - name: String
    + hidePost(post): void
    + deleteComment(comment): void
    + suspendUser(user, reason): void
    + moderateChallenge(challenge, action): void
  }

  class BoardPost <<게시판 게시글>> {
    - postId: Long
    - category: PostCategory
    - title: String
    - content: Text
    - reported: Boolean
    + update(title, content): void
    + report(reason): void
  }

  class Comment <<게시글 댓글>> {
    - commentId: Long
    - content: Text
    - reported: Boolean
    + update(content): void
    + report(reason): void
  }

  class StudyGroup <<스터디 그룹>> {
    - groupId: Long
    - name: String
    - description: String
    - createdAt: DateTime
    + addMember(user): void
    + removeMember(user): void
  }

  class StudyChallenge <<스터디 챌린지>> {
    - challengeId: Long
    - title: String
    - goalMinutes: Integer
    - startDate: Date
    - endDate: Date
    - status: ChallengeStatus
    - reported: Boolean
    + join(user): void
    + updateProgress(user, minutes): void
    + close(): void
    + report(reason): void
  }

  class Ranking <<랭킹 집계>> {
    - rankingId: Long
    - periodStart: Date
    - periodEnd: Date
    - rankingType: RankingType
    + calculate(group): RankingEntry[]
  }

  class RankingEntry <<랭킹 순위 항목>> {
    - rank: Integer
    - studyMinutes: Integer
    - userName: String
  }
}

enum PostCategory {
  QUESTION
  FREE
  STUDY_PROOF
}

enum ChallengeStatus {
  READY
  IN_PROGRESS
  CLOSED
}

enum RankingType {
  WEEKLY
  MONTHLY
}

User "1" -- "0..*" BoardPost
User "1" -- "0..*" Comment
BoardPost "1" *-- "0..*" Comment
StudyGroup "1" o-- "0..*" User
StudyGroup "1" o-- "0..*" StudyChallenge
StudyGroup "1" o-- "0..*" Ranking
Ranking "1" *-- "1..*" RankingEntry
RankingEntry "0..*" --> "1" User
Admin ..> BoardPost
Admin ..> Comment
BoardPost --> PostCategory
StudyChallenge --> ChallengeStatus
Ranking --> RankingType
@enduml
